Fixed horizontal scroll

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,4 +1,5 @@
 ﻿.root {
+  overflow: overlay;
   background-color: #2a2c2f;
   font-family: Inter, 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
